--- a/app/views/deviceadmin.scala.html
+++ b/app/views/deviceadmin.scala.html
@@ -26,13 +26,13 @@
     <!-- Main content -->
   <div class="container" id="main-content">
     <div class="row">
-      <!-- Left Column -->
+      <!-- Left 'Sidebar' Column -->
       <div class="col-lg-4">
           <!-- OPQBoxes docs -->
           <div class="row">
               <div class="col-lg-12">
-                  <div class="well">
-                    <b>OPQBoxes</b>
+                  <div class="bs-callout bs-callout-primary">
+                    <h4>OPQBoxes</h4>
                     <p>This page allows for the management of OPQBoxes.</p>
                     <p>OPQBoxes already registered with your account will show up in the table</p>
                     <p>Each row displays basic facts about your registered OPQBoxes.</p>
@@ -62,7 +62,7 @@
           </div>
       </div>
 
-      <!-- Right Column -->
+      <!-- Right 'Main Body' Column -->
       <div class="col-lg-8">
           <!-- List of opq boxes -->
           <div class="row">
@@ -114,6 +114,7 @@
                                   <li><a href="#">Past Day </a></li>
                                   <li><a href="#">Past Week </a></li>
                                   <li><a href="#">Past Month </a></li>
+                                  <li><a href="#">All Time</a></li>
                               </ul>
                           </div>
                       </div>
